--- a/package.json
+++ b/package.json
@@ -10,17 +10,25 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "babel-core": "^6.26.3",
+        "babel-loader": "^8.2.1",
+        "babel-preset-es2015": "^6.24.1",
         "cross-env": "^7.0.2",
         "laravel-mix": "^5.0.1",
         "laravel-mix-merge-manifest": "^0.1.2",
         "lodash": "^4.17.19",
         "resolve-url-loader": "^3.1.0",
-        "vue-loader": "^15.9.5",
-        "webpack-cli": "^4.2.0"
+        "webpack-cli": "3.3.9"
     },
     "dependencies": {
         "axios": "^0.19",
+        "loadash": "^1.0.0",
+        "vue": "^2.6.12",
+        "vue-cli": "^2.9.6",
+        "vue-loader": "^15.9.5",
         "vue-router": "^3.4.9",
-        "vue-sweetalert2": "^4.1.1"
+        "vue-sweetalert2": "^4.1.1",
+        "vue-template-compiler": "^2.6.12",
+        "webpack": "4.41.2"
     }
 }
