--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.3|^8.0",
         "alexpechkarev/google-maps": "^8.0",
         "aws/aws-sdk-php-laravel": "^3.6",
+        "diglactic/laravel-breadcrumbs": "^6.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -18,6 +19,7 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "spatie/laravel-permission": "^3.17",
+        "spatie/laravel-view-models": "^1.3",
         "tymon/jwt-auth": "1.0.1",
         "vinkla/hashids": "^9.0"
     },
