--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.3|^8.0",
         "alexpechkarev/google-maps": "^8.0",
         "aws/aws-sdk-php-laravel": "^3.6",
+        "barryvdh/laravel-translation-manager": "^0.5.9",
         "diglactic/laravel-breadcrumbs": "^6.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
