--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "vue-cli": "^2.9.6",
         "vue-loader": "^15.9.5",
         "vue-router": "^3.4.9",
+        "vue-select": "^3.10.8",
         "vue-sweetalert2": "^4.1.1",
         "vue-template-compiler": "^2.6.12",
         "vue2-leaflet": "^2.6.0",
