--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "vue-sweetalert2": "^4.1.1",
         "vue-template-compiler": "^2.6.12",
         "vue2-leaflet": "^2.6.0",
+        "vuelidate": "^0.7.6",
         "webpack": "4.41.2"
     }
 }
