--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "aws/aws-sdk-php-laravel": "^3.6",
         "barryvdh/laravel-translation-manager": "^0.5.9",
         "diglactic/laravel-breadcrumbs": "^6.0",
+        "doctrine/dbal": "^3.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
