--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
         "laravel/tinker": "^2.5",
         "spatie/laravel-permission": "^3.17",
         "spatie/laravel-view-models": "^1.3",
-        "tymon/jwt-auth": "1.0.1",
-        "vinkla/hashids": "^9.0"
+        "tymon/jwt-auth": "1.0.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
