--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "spatie/laravel-permission": "^3.17",
+        "spatie/laravel-sluggable": "^2.6",
         "spatie/laravel-view-models": "^1.3",
         "tymon/jwt-auth": "1.0.1"
     },
