--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "vue-chartjs": "^3.5.1",
         "vue-cli": "^2.9.6",
         "vue-loader": "^15.9.5",
+        "vue-multiselect": "^2.1.6",
         "vue-router": "^3.4.9",
         "vue-select": "^3.10.8",
         "vue-sweetalert2": "^4.1.1",
