--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "chart.js": "^2.9.4",
         "leaflet": "^1.7.1",
         "loadash": "^1.0.0",
+        "v-mask": "^2.2.3",
         "vue": "^2.6.12",
         "vue-chartjs": "^3.5.1",
         "vue-cli": "^2.9.6",
