--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "vue-cli": "^2.9.6",
         "vue-loader": "^15.9.5",
         "vue-multiselect": "^2.1.6",
+        "vue-native-color-picker": "^1.1.3",
         "vue-router": "^3.4.9",
         "vue-select": "^3.10.8",
         "vue-sweetalert2": "^4.1.1",
