--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,21 +14,19 @@ services:
       SERVICE_NAME: app
       SERVICE_TAGS: dev
     working_dir: /var/www
-    volumes:
-      - ./:/var/www
-      - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
       - app-network
 
-  #Nginx Service
+  #Apache2
   webserver:
-    image: httpd
-    container_name: apache
+    image: firespring/apache2-php
+    container_name: webserver
     restart: unless-stopped
     tty: true
     ports:
       - "80:80"
-    volumes:
+      - "443:443"
+	volumes:
       - ./:/var/www
       - ./apache2/conf.d/:/etc/apache2/conf.d/
     networks:
@@ -36,20 +34,17 @@ services:
 
   #MySQL Service
   db:
-    image: mysql
-    container_name: database
+    image: mysql:lastest
+    container_name: db
     restart: unless-stopped
     tty: true
     ports:
       - "3306:3306"
     environment:
-      MYSQL_DATABASE: aztlansystem
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: system
+      MYSQL_ROOT_PASSWORD: psdsystemdocker
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
-    volumes:
-      - dbdata:/var/lib/mysql
-      - ./mysql/my.cnf:/etc/mysql/my.cnf
     networks:
       - app-network
 
@@ -57,8 +52,3 @@ services:
 networks:
   app-network:
     driver: bridge
-
-#Volumes
-volumes:
-  dbdata:
-    driver: local
