--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=aa1u8jfae9y69z5.cgrmafmz6bng.us-east-1.rds.amazonaws.com
+DB_HOST=aztlansoftware.cgrmafmz6bng.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=aztlan
+DB_DATABASE=aztlansoftware
 DB_USERNAME=aztlanuser
 DB_PASSWORD=518812pd8025hf73mdg5
 DB_PASSWORD_PROD=bQztLXMLQgjn3uu
