--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=aztlansoftware.cgrmafmz6bng.us-east-1.rds.amazonaws.com
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=aztlansoftware
-DB_USERNAME=aztlanuser
-DB_PASSWORD=518812pd8025hf73mdg5
+DB_DATABASE=aztlan
+DB_USERNAME=root
+DB_PASSWORD=root
 DB_PASSWORD_PROD=bQztLXMLQgjn3uu
 
 BROADCAST_DRIVER=log
