--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
         "vue-select": "^3.10.8",
         "vue-sweetalert2": "^4.1.1",
         "vue-template-compiler": "^2.6.12",
+        "vue2-daterange-picker": "^0.6.3",
         "vue2-leaflet": "^2.6.0",
+        "vuejs-datepicker": "^1.6.2",
         "vuelidate": "^0.7.6",
         "webpack": "4.41.2"
     }
