--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
         "babel-loader": "^8.2.1",
         "babel-preset-es2015": "^6.24.1",
         "cross-env": "^7.0.2",
+        "css-loader": "^5.0.1",
         "laravel-mix": "^5.0.1",
         "laravel-mix-merge-manifest": "^0.1.2",
         "lodash": "^4.17.19",
         "resolve-url-loader": "^3.1.0",
+        "vue-style-loader": "^4.1.2",
         "webpack-cli": "3.3.9"
     },
     "dependencies": {
@@ -38,6 +40,7 @@
         "vue-template-compiler": "^2.6.12",
         "vue2-daterange-picker": "^0.6.3",
         "vue2-leaflet": "^2.6.0",
+        "vue2-timepicker": "^1.1.6",
         "vuejs-datepicker": "^1.6.2",
         "vuelidate": "^0.7.6",
         "webpack": "4.41.2"
