--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,15 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+DB_CONNECTION=mysql
+DB_HOST=localhost
+DB_PORT=3306
+DB_DATABASE=aztlan
+DB_USERNAME=root
+DB_PASSWORD=root
+DB_PASSWORD_PROD=bQztLXMLQgjn3uu
+
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
