--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ DB_PASSWORD_PROD=bQztLXMLQgjn3uu
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=database
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
