--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
         "webpack-cli": "3.3.9"
     },
     "dependencies": {
+        "apexcharts": "^3.23.1",
         "axios": "^0.19",
         "chart.js": "^2.9.4",
         "leaflet": "^1.7.1",
         "loadash": "^1.0.0",
         "v-mask": "^2.2.3",
         "vue": "^2.6.12",
+        "vue-apexcharts": "^1.6.0",
         "vue-chartjs": "^3.5.1",
         "vue-cli": "^2.9.6",
         "vue-loader": "^15.9.5",
