--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,8 @@
         "laravel/fortify": "^1.7",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
+        "league/flysystem-aws-s3-v3": "~1.0",
+        "league/flysystem-cached-adapter": "~1.0",
         "spatie/laravel-permission": "^3.17",
         "spatie/laravel-sluggable": "^2.6",
         "spatie/laravel-view-models": "^1.3",
