--- a/.env
+++ b/.env
@@ -36,7 +36,7 @@ MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+AWS_BUCKET=softwarelogocompanies
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
