--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "intervention/image": "^2.5",
         "laracasts/flash": "^3.2",
         "laravel/fortify": "^1.7",
         "laravel/framework": "^8.12",
