--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "~1.0",
         "league/flysystem-cached-adapter": "~1.0",
+        "rollbar/rollbar-laravel": "^7.0",
         "spatie/laravel-permission": "^3.17",
         "spatie/laravel-sluggable": "^2.6",
         "spatie/laravel-view-models": "^1.3",
